<resources>
    <string name="app_name">TemperatureConverter</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius_progress">50°C</string>
    <string name="fahrenheit_progress">50°F</string>
    <string name="interesting_message_warmer">I wish it were warmer</string>
    <string name="interesting_message_cooler">I wish it were cooler</string>
</resources>