<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/CelsiusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        app:layout_constraintBottom_toTopOf="@+id/CelsiusSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/CelsiusProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius_progress"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/FahrenheitSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CelsiusSeekBar"
        app:layout_constraintVertical_bias="0.050000012" />

    <SeekBar
        android:id="@+id/CelsiusSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/FahrenheitSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FahrenheitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        app:layout_constraintBottom_toTopOf="@+id/FahrenheitSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CelsiusSeekBar"
        app:layout_constraintVertical_bias="0.94" />

    <SeekBar
        android:id="@+id/FahrenheitSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="212"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/FahrenheitProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit_progress"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FahrenheitSeekBar"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/interesting_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interesting_message_cooler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FahrenheitProgress"
        app:layout_constraintVertical_bias="0.72" />
</androidx.constraintlayout.widget.ConstraintLayout>